# FastAPI-JWT

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  db.py  main.py
src/api/v1/: __init__.py  auth.py
src/api/v1/dependencies/: auth.py  db.py
src/api/v1/examples/: auth.py
src/api/v1/responses/: auth.py
src/gunicorn/: run.py
src/migrations/: env.py
src/migrations/versions/: 2025_12_29_1832-8093419d4e91_removed_unused_fields.py  2026_02_15_2152-2094603e316e_added_basic_role_model.py  2026_02_16_1120-7a5dea6eb433_added_rules_system.py
src/models/: __init__.py  auth.py  base.py  rules.py
src/models/mixins/: primary_key.py
src/repos/: auth.py  base.py  rules.py
src/repos/mappers/: base.py  mappers.py
src/schemas/: auth.py  base.py  rules.py
src/services/: auth.py  rules.py
src/utils/: db_tools.py  exceptions.py  permissions.py  temp_users.py
tests/: conftest.py  test_hashing.py  test_login.py  test_profile.py  test_register.py
